--- a/relays.yaml
+++ b/relays.yaml
@@ -71,8 +71,7 @@ relays:
 - wss://nostr-relay.untethr.me
 - wss://nostr-relay.usebitcoin.space
 - wss://nostr-relay.wolfandcrow.tech
-- wss://nostr-sg.com
-- wss://nostr-sg.com
+- wss://relay.nostr-sg.com
 - wss://nostr-us.coinfundit.com
 - wss://nostr-verif.slothy.win
 - wss://nostr-verified.wellorder.net
